# Nexus

./: .dockerignore  .gitattributes  .gitignore  .opencode.json  AGENTS.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: safety-gate-runbook.md  safety-gate-v1.md
frontend/: AGENTS.md  app.py
src/app/: AGENTS.md  main.py
src/app/agents/: rag_agent.py  tools.py
src/app/api/: deps.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: agent.py  knowledge.py  naive.py
src/app/core/: config.py  limiter.py  observability.py  session.py
src/app/db/: init_data.py
src/app/graph/: prompt.py  propmt.py  state.py  workflow.py
src/app/graph/nodes/: agent.py  patient_worker.py  safety_gate.py  specialist.py  supervisor.py
src/app/graph/tools/: patients.py  rag.py
src/app/models/: knowledge.py  patient.py
src/app/schemas/: __init__.py  chat.py  knowledge.py  safety.py
src/app/services/: knowledge_service.py  llm_service.py  naive_service.py  patient_service.py  safety_gate_service.py
tests/api/v1/: test_agent_safety_gate.py
tests/graph/: test_safety_gate_node.py
tests/services/: test_safety_gate_service.py
