[project]
name = "nexus-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.6",
    "pgvector>=0.4.2",
    "psycopg>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.5.0",
    "scalar-fastapi>=1.5.0",
    "sentence-transformers>=5.2.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# ------- CONFIGURACION DE RUFF --------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Reglas a activar:
# E: pycodestyle (errores basicos de estilo)
# F: Pyflakes (errores logicos, variables no usadas)
# I: isort (ordenar importaciones automaticamente)
# B: flake8-bugbear (encuentra bugs potenciales)
# UP: pyupgrade (Obliga a usar sintaxis moderna de python 3.12)
select = ["E", "F", "I", "B", "UP"]

# Reglas a ignorar
ignore = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
    "fastapi.Path",
    "fastapi.params.Path",
    "fastapi.Body",
    "fastapi.params.Body",
    "fastapi.File",
    "fastapi.params.File",
    "fastapi.Header",
    "fastapi.params.Header",
    "fastapi.Security",
]

[tool.ruff.format]
# Usar comillas dobles (estandar en python)
quote-style = "double"
# Sangria con espacios, no tabs
indent-style = "space"

[project.scripts]
dev = "app.main:start"
